# rust-templates

./: rust-toolchain
.github/workflows/: ci.yml
account/template/: Cargo.toml
account/template/src/: lib.rs
